--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,20 @@
 {
-"compilerOptions": {
-  "target": "es2016",
-  "module": "commonjs",
-  "strict": true,
-  "esModuleInterop": true,
-  "skipLibCheck": true,
-  "forceConsistentCasingInFileNames": true,
+  "compilerOptions": {
+    "target": "es2019",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
 
-  // ✅ חשובים מאוד ל-TypeORM
-  "experimentalDecorators": true,
-  "emitDecoratorMetadata": true
-}
+    // ✅ ל-TypeORM ודקורטורים
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
 
+    // ✅ מיקום build
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
